chore: fix typing errors

--- a/src/shared/tsconfig.json
+++ b/src/shared/tsconfig.json
@@ -3,9 +3,6 @@
   "compilerOptions": {
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "noImplicitReturns": true,
-    "paths": {
-      "altinn-shared/*": ["./shared/src/*"]
-    }
+    "noImplicitReturns": true
   }
 }
