--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,3 +36,41 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Publish to CDN (main branch only)
+        if: github.ref == 'refs/heads/main'
+        working-directory: src
+        run: |
+          echo Clone, copy, commit and push to Altinn-CDN
+          APP_VERSION=$(jq '.version' ./altinn-app-frontend/package.json)
+          APP_MAJOR=$(echo $APP_VERSION | tr --delete '"' | cut -d'.' -f1)
+          APP_MINOR=$(echo $APP_VERSION | tr --delete '"' | cut -d'.' -f2)
+          APP_PATCH=$(echo $APP_VERSION | tr --delete '"' | cut -d'.' -f3)
+          echo altinn-app-frontend version: $APP_MAJOR.$APP_MINOR.$APP_PATCH
+          AUTHOR_FULL=$(git log -1 | grep Author)
+          AUTHOR_NAME=$(git log -1 | grep Author | cut -d' ' -f2)
+          AUTHOR_EMAIL=$(git log -1 | grep Author | cut -d' ' -f3 | cut -d'<' -f2 | cut -d'>' -f1)
+          COMMIT_ID=$(git rev-parse HEAD~0)
+          git log -1 | grep -Ev "commit|Author|Date" > ./../../commitmsg.txt
+          cd ../..
+          git clone https://$(${{secrets.ALTINN_CDN_TOKEN}})@github.com/Altinn/altinn-cdn.git
+          echo Copy Major Version
+          mkdir -p ./altinn-cdn/toolkits/altinn-app-frontend/$APP_MAJOR
+          cp -fr ./app-frontend-react/src/altinn-app-frontend/dist/altinn-app-frontend.js ./altinn-cdn/toolkits/altinn-app-frontend/$APP_MAJOR/altinn-app-frontend.js
+          cp -fr ./app-frontend-react/src/altinn-app-frontend/dist/altinn-app-frontend.css ./altinn-cdn/toolkits/altinn-app-frontend/$APP_MAJOR/altinn-app-frontend.css
+          echo Copy Minor Version
+          mkdir -p ./altinn-cdn/toolkits/altinn-app-frontend/$APP_MAJOR.$APP_MINOR
+          cp -fr ./app-frontend-react/src/altinn-app-frontend/dist/altinn-app-frontend.js ./altinn-cdn/toolkits/altinn-app-frontend/$APP_MAJOR.$APP_MINOR/altinn-app-frontend.js
+          cp -fr ./app-frontend-react/src/altinn-app-frontend/dist/altinn-app-frontend.css ./altinn-cdn/toolkits/altinn-app-frontend/$APP_MAJOR.$APP_MINOR/altinn-app-frontend.css
+          echo Copy Patch
+          mkdir -p ./altinn-cdn/toolkits/altinn-app-frontend/$APP_MAJOR.$APP_MINOR.$APP_PATCH
+          cp -fr ./app-frontend-react/src/altinn-app-frontend/dist/altinn-app-frontend.js ./altinn-cdn/toolkits/altinn-app-frontend/$APP_MAJOR.$APP_MINOR.$APP_PATCH/altinn-app-frontend.js
+          cp -fr ./app-frontend-react/src/altinn-app-frontend/dist/altinn-app-frontend.css ./altinn-cdn/toolkits/altinn-app-frontend/$APP_MAJOR.$APP_MINOR.$APP_PATCH/altinn-app-frontend.css
+          cd altinn-cdn
+          git config --global user.email "$AUTHOR_EMAIL"
+          git config --global user.name "$AUTHOR_NAME"
+          git add .
+          echo "$AUTHOR_FULL updated altinn-app-frontend to $APP_MAJOR.$APP_MINOR.$APP_PATCH" > ./../commit1.txt
+          echo "based on commit https://github.com/Altinn/altinn-studio/commit/$COMMIT_ID" > ./../commit2.txt
+          cat ./../commit1.txt ./../commit2.txt ./../commitmsg.txt > ./../commit.txt
+# git commit -F ./../commit.txt
+# git push
