chore: check if sonar.coverage.exclusions works for test files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sources=src
 sonar.exclusions=**/webpack.config.*.js,**/node_modules,**/dist,**/*.test.ts?,**/setupTests.ts
 
 sonar.javascript.lcov.reportPaths=src/altinn-app-frontend/coverage/lcov.info,src/shared/coverage/lcov.info
-sonar.coverage.exclusions=**/__mocks__/**,src/types/**
+sonar.coverage.exclusions=**/__mocks__/**,src/types/**,**/*.test.ts?
