chore: update sonar.exclusions list

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,6 @@ sonar.projectKey=Altinn_app-frontend-react
 sonar.organization=altinn
 
 sonar.sources=src
-sonar.exclusions=**/webpack.config.*.js,**/node_modules,**/dist,**/*.test.ts?,**/setupTests.ts
+sonar.exclusions=**/webpack.config.*.js,**/node_modules,**/dist,**/*.test.ts*,**/setupTests.ts,**/__mocks__/**,src/types/**
 
 sonar.javascript.lcov.reportPaths=src/altinn-app-frontend/coverage/lcov.info,src/shared/coverage/lcov.info
-sonar.coverage.exclusions=**/__mocks__/**,src/types/**
