--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -50,6 +50,7 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -76,6 +77,8 @@
     "jest-junit": "^13.0.0",
     "mini-css-extract-plugin": "^2.6.0",
     "msw": "^0.39.2",
+    "react-refresh": "^0.12.0",
+    "react-refresh-typescript": "^2.0.4",
     "react-styleguidist": "^11.2.0",
     "react-test-renderer": "^17.0.2",
     "redux-mock-store": "^1.5.4",
