chore: minor fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "**/node_modules": true
   },
   "typescript.surveys.enabled": false,
+  "typescript.preferences.quoteStyle": "single",
   "editor.codeActionsOnSave": { "source.fixAll": true }
 }
