Tests are not being run when the tests themselves change. Updating github workflow to trigger cypress tests when there are test changes.

--- a/.github/workflows/cypress-altinn-app-frontend.yml
+++ b/.github/workflows/cypress-altinn-app-frontend.yml
@@ -6,11 +6,13 @@ on:
     paths:
       - 'src/altinn-app-frontend/**'
       - 'src/shared/**'
+      - 'test/cypress/**'
   pull_request:
     branches: [main]
     paths:
       - 'src/altinn-app-frontend/**'
       - 'src/shared/**'
+      - 'test/cypress/**'
 
   workflow_dispatch:
 
