feat: soft-validation initial work

--- a/src/.yarnrc.yml
+++ b/src/.yarnrc.yml
@@ -4,6 +4,11 @@ enableTelemetry: false
 
 nodeLinker: node-modules
 
+npmScopes:
+  altinn:
+    npmRegistryServer: https://npm.pkg.github.com
+    npmAuthToken: ${GITHUB_PACKAGES_PAT:-}
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
