--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.4"
   },
   "packageManager": "yarn@3.2.0",
