--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "altinn-app-frontend",
-  "version": "3.36.1",
+  "version": "3.36.2s",
   "description": "",
   "main": "index.js",
   "scripts": {
