Adding back if expression that I removed and committed by accident (sorry!)

--- a/.github/workflows/cypress-altinn-app-frontend.yml
+++ b/.github/workflows/cypress-altinn-app-frontend.yml
@@ -59,6 +59,9 @@ jobs:
         working-directory: test/cypress
 
   altinn-app-frontend-test-on-fork-pr:
+    if: |
+      github.repository_owner == 'Altinn' &&
+      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == true)
 
     runs-on: ubuntu-latest
 
