--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
     "lint": "eslint \"./**/src/**/*.ts*\"",
-    "test": "yarn workspaces foreach run test"
+    "test": "yarn workspaces foreach run test",
+    "postinstall": "cd .. && husky install"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.22.0",
@@ -15,11 +16,18 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.4"
   },
   "packageManager": "yarn@3.2.0",
   "workspaces": [
     "altinn-app-frontend",
     "shared"
-  ]
+  ],
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+    "*.{css,md}": "prettier --write"
+  }
 }
