--- a/src/package.json
+++ b/src/package.json
@@ -17,8 +17,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "husky": ">=6",
-    "lint-staged": ">=10",
+    "husky": "^6",
+    "lint-staged": "^10",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4"
   },
