Prettier json files as well

--- a/src/package.json
+++ b/src/package.json
@@ -29,6 +29,6 @@
   ],
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
-    "*.{css,md}": "prettier --write"
+    "*.{css,md,json}": "prettier --write"
   }
 }
