--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -40,7 +40,7 @@
     "react-number-format": "^4.9.3",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.3.1",
-    "redux": "4.1.2",
+    "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5",
     "typescript": "^4.6.4",
