chore: patched deps

--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -47,19 +47,19 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
-    "@babel/preset-react": "^7.16.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "@babel/core": "^7.17.12",
+    "@babel/preset-env": "^7.17.12",
+    "@babel/preset-react": "^7.17.12",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^8.0.0",
-    "@testing-library/user-event": "^14.1.1",
+    "@testing-library/user-event": "^14.2.0",
     "@types/dot-object": "^2.1.2",
     "@types/enzyme": "^3.10.12",
-    "@types/jest": "^27.5.0",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "^17.0.16",
+    "@types/jest": "^27.5.1",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-test-renderer": "^17.0.2",
@@ -71,26 +71,27 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "enzyme": "^3.11.0",
-    "eslint": "^8.14.0",
+    "eslint": "^8.15.0",
     "fork-ts-checker-notifier-webpack-plugin": "6.0.0",
     "fork-ts-checker-webpack-plugin": "^7.2.11",
+    "html-react-parser": "^1.4.12",
     "jest": "^27.5.1",
     "jest-junit": "^13.2.0",
     "mini-css-extract-plugin": "^2.6.0",
-    "msw": "^0.39.2",
+    "msw": "^0.40.0",
     "react-refresh": "^0.13.0",
     "react-refresh-typescript": "^2.0.4",
     "react-styleguidist": "^11.2.0",
     "react-test-renderer": "^17.0.2",
     "redux-mock-store": "^1.5.4",
-    "redux-saga-test-plan": "4.0.4",
+    "redux-saga-test-plan": "4.0.5",
     "rimraf": "^3.0.2",
     "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "^27.1.5",
     "ts-loader": "^9.3.0",
-    "webpack": "^5.72.0",
+    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
   },
