--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -35,7 +35,7 @@
     "@types/diff": "^5.0.2",
     "@types/dompurify": "^2.3.3",
     "@types/enzyme": "^3.10.12",
-    "@types/jest": "^27.5.0",
+    "@types/jest": "^27.5.1",
     "@types/jsdom": "^16.2.14",
     "@types/marked": "^4.0.3",
     "@types/react": "17.0.43",
@@ -44,11 +44,12 @@
     "@types/react-test-renderer": "^17.0.2",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "altinn-designsystem": "^3.1.0",
-    "babel-jest": "^27.5.1",
+    "babel-jest": "^28.1.0",
     "babel-loader": "^8.2.5",
     "enzyme": "^3.11.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.0",
     "jest-environment-enzyme": "^7.1.2",
+    "jest-environment-jsdom": "^28.1.0",
     "jest-enzyme": "^7.1.2",
     "jest-junit": "^13.2.0",
     "jsdom": "^19.0.0",
@@ -57,7 +58,7 @@
     "react-dom": "^17.0.2",
     "react-styleguidist": "^11.2.0",
     "react-test-renderer": "^17.0.2",
-    "ts-jest": "^27.1.4"
+    "ts-jest": "^28.0.2"
   },
   "jest": {
     "transform": {
@@ -69,7 +70,8 @@
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
+      "^uuid$": "<rootDir>/../node_modules/uuid/dist/index.js"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
