--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -39,7 +39,7 @@
     "react-dropzone": "^11.7.1",
     "react-number-format": "^4.9.3",
     "react-redux": "^8.0.1",
-    "react-router-dom": "^5.3.1",
+    "react-router-dom": "^5.3.3",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5",
@@ -58,7 +58,7 @@
     "@types/dot-object": "^2.1.2",
     "@types/enzyme": "^3.10.12",
     "@types/jest": "^27.5.1",
-    "@types/react": "^17.0.45",
+    "@types/react": "17.0.43",
     "@types/react-dom": "^17.0.17",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
