--- a/src/.yarnrc.yml
+++ b/src/.yarnrc.yml
@@ -1,13 +1,18 @@
 enableMessageNames: false
 
+npmScopes:
+  altinn:
+    npmRegistryServer: https://npm.pkg.github.com
+    npmAuthToken: ${GITHUB_PACKAGES_PAT:-}
+
 enableTelemetry: false
 
 nodeLinker: node-modules
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
+    spec: '@yarnpkg/plugin-workspace-tools'
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
+    spec: '@yarnpkg/plugin-interactive-tools'
 
 yarnPath: .yarn/releases/yarn-3.2.0.cjs
