REU-466; Fix after review

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -49,6 +49,7 @@
     ],
     "jsx-a11y/no-autofocus": ["off"],
     "@typescript-eslint/no-explicit-any": ["off"],
-    "import/no-unresolved": ["off"]
+    "import/no-unresolved": ["off"],
+    "@typescript-eslint/no-unused-vars": ["error", { "ignoreRestSiblings": true }]
   }
 }
