--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,6 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
         with:
-          path: app-frontend
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
 
       - name: install node
@@ -23,27 +22,27 @@ jobs:
           node-version: '16'
 
       - name: install dependencies
-        working-directory: app-frontend/src
+        working-directory: src
         env:
           GITHUB_PACKAGES_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: yarn --immutable
 
       - name: run build
-        working-directory: app-frontend/src/altinn-app-frontend
+        working-directory: src/altinn-app-frontend
         run: yarn build
 
       - name: run eslint
-        working-directory: app-frontend/src
+        working-directory: src
         run: yarn lint
 
       - name: run tests
-        working-directory: app-frontend/src
+        working-directory: src
         run: yarn test --coverage
 
-      - name: SonarCloud Scan
+      - name: Upload code coverage reports
+        uses: actions/upload-artifact@v2
         with:
-          projectBaseDir: app-frontend
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          name: code-coverage
+          path: |
+            src/altinn-app-frontend/coverage/lcov.info
+            src/shared/coverage/lcov.info
