chore: skip main branch on sonarcloud scan for PR workflow

--- a/.github/workflows/sonarcloud-scan.yml
+++ b/.github/workflows/sonarcloud-scan.yml
@@ -2,6 +2,8 @@ name: SonarCloud Scan
 on:
   workflow_run:
     workflows: ['Build and run unit tests']
+    branches:
+      - '!main'
     types:
       - completed
 
