chore: disable SonarCloud scan for forks

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,7 @@ jobs:
         run: yarn test --coverage
 
       - name: SonarCloud Scan
+        if: github.event.repository.fork == false
         with:
           projectBaseDir: app-frontend
         uses: SonarSource/sonarcloud-github-action@master
