Adding lint-staged to the cypress part of the project and running a simple script to check for skipped tests on pre-commit, to prevent these problems in the future

--- a/src/package.json
+++ b/src/package.json
@@ -28,7 +28,10 @@
     "shared"
   ],
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+    "*.{js,jsx,ts,tsx}": [
+      "../.husky/pre-commit-check-for-skipped-tests",
+      "eslint --cache --fix"
+    ],
     "*.{css,md,json}": "prettier --write"
   }
 }
