--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -72,6 +72,7 @@
     "css-loader": "^6.7.1",
     "enzyme": "^3.11.0",
     "eslint": "^8.17.0",
+    "eslint-plugin-sonarjs": "^0.13.0",
     "fork-ts-checker-notifier-webpack-plugin": "6.0.0",
     "fork-ts-checker-webpack-plugin": "^7.2.11",
     "html-react-parser": "^1.4.14",
