--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -21,8 +21,7 @@
     "ecmaFeatures": {
       "jsx": true
     },
-    "sourceType": "module",
-    "project": "tsconfig.json"
+    "sourceType": "module"
   },
   "plugins": ["@typescript-eslint", "import", "sonarjs"],
   "settings": {
@@ -57,5 +56,19 @@
     ],
     "@typescript-eslint/consistent-type-imports": ["warn"],
     "react-hooks/exhaustive-deps": ["error"]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "parserOptions": {
+        "project": "tsconfig.json"
+      }
+    },
+    {
+      "files": ["*.js", "*.jsx"],
+      "rules": {
+        "@typescript-eslint/no-var-requires": ["off"]
+      }
+    }
+  ]
 }
