--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -55,7 +55,14 @@
       { "ignoreRestSiblings": true }
     ],
     "@typescript-eslint/consistent-type-imports": ["warn"],
-    "react-hooks/exhaustive-deps": ["error"]
+    "react-hooks/exhaustive-deps": ["error"],
+    "sonarjs/no-duplicate-string": ["off"],
+    "sonarjs/cognitive-complexity": ["warn", 15],
+    "sonarjs/no-collapsible-if": ["warn"],
+    "sonarjs/prefer-single-boolean-return": ["warn"],
+    "sonarjs/no-identical-functions": ["warn"],
+    "sonarjs/no-small-switch": ["warn"],
+    "sonarjs/no-nested-template-literals": ["warn"]
   },
   "overrides": [
     {
