--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -23,7 +23,13 @@
     "sourceType": "module",
     "project": "tsconfig.json"
   },
-  "plugins": ["@typescript-eslint", "import"],
+  "plugins": [
+    "@typescript-eslint",
+    "import",
+    "preferred-import-path",
+    "no-relative-import-paths",
+    "simple-import-sort"
+  ],
   "settings": {
     "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
     "import/parsers": {
@@ -56,5 +62,63 @@
     ],
     "@typescript-eslint/consistent-type-imports": ["warn"],
     "react-hooks/exhaustive-deps": ["error"]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["altinn-app-frontend/src/**"],
+      "rules": {
+        "no-relative-import-paths/no-relative-import-paths": [
+          "warn",
+          { "allowSameFolder": true }
+        ],
+        "preferred-import-path/preferred-import-path": [
+          "warn",
+          {
+            "altinn-app-frontend/src": "src",
+            "shared/src": "altinn-shared"
+          }
+        ],
+        "simple-import-sort/imports": [
+          "error",
+          {
+            "groups": [
+              [
+                // React related packages come first.
+                "^react[^\\u0000]*$",
+                "^react.*\\u0000$"
+              ],
+              [
+                // Side effect imports (discouraged!)
+                "^\\u0000"
+              ],
+              [
+                // All imports from external packages in node_modules (with type-only imports last)
+                "^@?(?!src|altinn-shared)\\w+[^\\u0000]*$",
+                "^@?(?!src|altinn-shared)\\w+.*\\u0000$"
+              ],
+              [
+                // Relative/sibling imports
+                "^\\./?[^\\u0000]*$",
+                "^\\./?.*\\u0000$"
+              ],
+              [
+                // Our internal packages
+                "^src/[^\\u0000]+$",
+                "^src/.*\\u0000$"
+              ],
+              [
+                // Imports from altinn-shared
+                "^altinn-shared/[^\\u0000]+$",
+                "^altinn-shared/.*\\u0000$"
+              ],
+              [
+                // Lastly, style imports
+                "^.+\\.(s?css|less)$"
+              ]
+            ]
+          }
+        ]
+      }
+    }
+  ]
 }
