--- a/src/package.json
+++ b/src/package.json
@@ -14,9 +14,12 @@
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-no-relative-import-paths": "^1.3.4",
+    "eslint-plugin-preferred-import-path": "^1.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^6",
     "lint-staged": "^10",
     "prettier": "^2.7.1",
