Moving the eslint-plugin-sonarjs up one level (I forgot that eslint is installed on the upper level)

--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-sonarjs": "^0.13.0",
     "husky": "^6",
     "lint-staged": "^10",
     "prettier": "^2.7.1",
