chore: allow unused args named '_action' because this is used by TS to infer the payload type

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -52,7 +52,10 @@
     "import/no-unresolved": ["off"],
     "@typescript-eslint/no-unused-vars": [
       "error",
-      { "ignoreRestSiblings": true }
+      {
+        "argsIgnorePattern": "^_action$",
+        "ignoreRestSiblings": true
+      }
     ],
     "@typescript-eslint/consistent-type-imports": ["warn"],
     "react-hooks/exhaustive-deps": ["error"]
