--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -52,10 +52,7 @@
     "import/no-unresolved": ["off"],
     "@typescript-eslint/no-unused-vars": [
       "error",
-      {
-        "argsIgnorePattern": "^_action$",
-        "ignoreRestSiblings": true
-      }
+      { "ignoreRestSiblings": true }
     ],
     "@typescript-eslint/consistent-type-imports": ["warn"],
     "react-hooks/exhaustive-deps": ["error"]
