--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -55,6 +55,7 @@
       { "ignoreRestSiblings": true }
     ],
     "@typescript-eslint/consistent-type-imports": ["warn"],
-    "react-hooks/exhaustive-deps": ["error"]
+    "react-hooks/exhaustive-deps": ["error"],
+    "react/prop-types": ["off"]
   }
 }
