--- a/src/package.json
+++ b/src/package.json
@@ -14,9 +14,12 @@
     "eslint-import-resolver-typescript": "^3.2.5",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-no-relative-import-paths": "^1.3.4",
+    "eslint-plugin-preferred-import-path": "^1.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sonarjs": "^0.13.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
