Updating rules to always use absolute imports

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -91,7 +91,7 @@
       "rules": {
         "no-relative-import-paths/no-relative-import-paths": [
           "warn",
-          { "allowSameFolder": true }
+          { "allowSameFolder": false }
         ],
         "preferred-import-path/preferred-import-path": [
           "warn",
