Using the new Error variant for panel. Also adding assertUnreachable() so that TypeScript gives us an error in case a new variant gets added to the layout type string union without also being added to this switch/case.

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -59,7 +59,7 @@
     "import/no-unresolved": ["off"],
     "@typescript-eslint/no-unused-vars": [
       "error",
-      { "ignoreRestSiblings": true }
+      { "ignoreRestSiblings": true, "argsIgnorePattern": "^_" }
     ],
     "@typescript-eslint/consistent-type-imports": ["warn"],
     "react-hooks/exhaustive-deps": ["error"],
