--- a/src/altinn-app-frontend/tsconfig.json
+++ b/src/altinn-app-frontend/tsconfig.json
@@ -4,7 +4,9 @@
     "baseUrl": ".",
     "paths": {
       "altinn-shared/*": ["../shared/src/*"],
-      "src/*": ["src/*"]
+      "src/*": ["src/*"],
+      "__mocks__/*": ["__mocks__/*"],
+      "testUtils": ["./testUtils.tsx"]
     }
   }
 }
