--- a/src/package.json
+++ b/src/package.json
@@ -11,7 +11,6 @@
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.2.5",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-no-relative-import-paths": "^1.3.4",
@@ -23,8 +22,7 @@
     "eslint-plugin-sonarjs": "^0.13.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
+    "prettier": "^2.7.1"
   },
   "packageManager": "yarn@3.2.1",
   "workspaces": [
