Issue #353 ready for review.

--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,6 @@ nb-configuration.xml
 .idea
 src/Altinn.Apps/AppTemplates/AspNet/App/Properties/launchSettings.json
 *.iml
+
+## Dumps
+*.stackdump
