--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -18,7 +18,7 @@
   "author": "Altinn",
   "license": "3-Clause BSD",
   "dependencies": {
-    "@altinn/altinn-design-system": "^0.5.4",
+    "@altinn/altinn-design-system": "^0.5.6",
     "@babel/polyfill": "^7.12.1",
     "@date-io/moment": "1.3.13",
     "@material-ui/core": "^4.12.4",
@@ -91,7 +91,8 @@
   },
   "jest": {
     "transform": {
-      ".(ts|tsx)": "ts-jest"
+      ".(ts|tsx)": "ts-jest",
+      "\\.js$": "ts-jest"
     },
     "reporters": [
       "default",
@@ -124,6 +125,9 @@
     "testEnvironmentOptions": {
       "url": "https://altinn3local.no/ttd/test"
     },
-    "testEnvironment": "jsdom"
+    "testEnvironment": "jsdom",
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-leaflet)/"
+    ]
   }
 }
