Only uploading the artifacts on failure - now they were skipped when the previous step failed (which is the opposite of what we want)

--- a/.github/workflows/cypress-altinn-app-frontend.yml
+++ b/.github/workflows/cypress-altinn-app-frontend.yml
@@ -60,6 +60,7 @@ jobs:
         working-directory: test/cypress
 
       - uses: actions/upload-artifact@v3
+        if: failure()
         with:
           name: redux-state-history
           path: test/cypress/redux-history/*.json
@@ -96,6 +97,7 @@ jobs:
         working-directory: test/cypress
 
       - uses: actions/upload-artifact@v3
+        if: failure()
         with:
           name: redux-state-history
           path: test/cypress/redux-history/*.json
