--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -30,7 +30,7 @@
     "axios": "0.27.2",
     "dot-object": "2.1.4",
     "jsonpointer": "5.0.1",
-    "jss-rtl": "^0.3.0",
+    "jss-rtl": "0.3.0",
     "moment": "2.29.4",
     "react": "18.2.0",
     "react-content-loader": "6.2.0",
