Going back to running unit tests in parallel

--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -7,9 +7,9 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js --mode development --progress",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.production.js --progress",
     "docker": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.docker.js --mode development --progress",
-    "test": "jest --runInBand",
-    "test:watch": "jest --runInBand --watch",
-    "test:watchall": "jest --runInBand --watchAll",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:watchall": "jest --watchAll",
     "tsc": "tsc --noEmit --skipLibCheck",
     "tsc:watch": "tsc --watch --noEmit --skipLibCheck",
     "clean": "rimraf dist compiled",
