Trying out caching in github actions to reduce the time it takes to install dependencies

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -43,13 +43,25 @@ jobs:
         with:
           node-version: '16'
 
-      - name: Install altinn-app-frontend dependencies
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+
+      - uses: actions/cache@v3
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install frontend dependencies
         env:
           GITHUB_PACKAGES_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: yarn --immutable
         working-directory: src
 
-      - name: Install cypress and test dependencies
+      - name: Install cypress dependencies
         run: yarn --immutable
         working-directory: test/cypress
 
@@ -97,13 +109,25 @@ jobs:
         with:
           node-version: '16'
 
-      - name: Install altinn-app-frontend dependencies
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+
+      - uses: actions/cache@v3
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install frontend dependencies
         env:
           GITHUB_PACKAGES_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: yarn --immutable
         working-directory: src
 
-      - name: Install cypress and test dependencies
+      - name: Install cypress dependencies
         run: yarn --immutable
         working-directory: test/cypress
 
