Enabling strict null checks in typescript (and adding noEmit and skipLibCheck as default)

--- a/src/altinn-app-frontend/package.json
+++ b/src/altinn-app-frontend/package.json
@@ -10,8 +10,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:watchall": "jest --watchAll",
-    "tsc": "tsc --noEmit --skipLibCheck",
-    "tsc:watch": "tsc --watch --noEmit --skipLibCheck",
+    "tsc": "tsc",
+    "tsc:watch": "tsc --watch",
     "clean": "rimraf dist compiled",
     "webpack-watch": "cross-env NODE_ENV=development webpack --mode=development --config webpack.config.development.js --watch --progress",
     "styleguidist:run": "yarn dlx styleguidist server",
